# hungarian-method

./: README.md  hungarian.py  main.py  pyproject.toml  requirements.txt
tests/: test_hungarian.py
