[project]
name = "hungarian-method"
version = "0.1.0"
description = ""
authors = [
    {name = "gleb",email = "deffender1337@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
